fix(foxy-theme-overrides): increase logo max-height to 240px for improved visibility

--- a/foxy-styles/foxy-theme-overrides.css
+++ b/foxy-styles/foxy-theme-overrides.css
@@ -113,7 +113,7 @@
   #fc .fc-logo__image,
   #fc #fc-logo--receipt {
     max-width: 60%;
-    max-height: 100px;
+    max-height: 240px;
   }
 }
 
@@ -122,7 +122,7 @@
   #fc .fc-logo__image,
   #fc #fc-logo--receipt {
     max-width: 45%;
-    max-height: 100px;
+    max-height: 240px;
   }
 }
 
